# SRTPluginProviderRE9

.github/workflows/: AutomatedRelease.yml
src/SRTPluginProviderRE9/: Contexts.cs  GameMemoryScanner.cs
src/SRTPluginProviderRE9/Extensions/: ProcessMemoryHandlerExtensions.cs
src/SRTPluginRE9/: CMakeLists.txt  CMakePresets.json
src/SRTPluginRE9/src/Hook/: CMakeLists.txt  DX12Hook.cpp  Hook.cpp  Settings.cpp  UI.cpp  VTableScanner.cpp
src/SRTPluginRE9/src/Hook/include/: DX12Hook.h  EnemyIds.h  GameObjects.h  Globals.h  Logo.h  Settings.h  UI.h
